Updt: tela main

--- a/pokemon_frontend/lib/pokemon_frontend_web/controllers/page_html/home.html.heex
+++ b/pokemon_frontend/lib/pokemon_frontend_web/controllers/page_html/home.html.heex
@@ -103,6 +103,30 @@
             border: 2px solid #ccc;
             width: 200px;
         }
+
+        .welcome-section {
+            background-color: #ff3b30; /* Cor de fundo amarela para chamar atenção */
+            padding: 20px;
+            border-radius: 15px;
+            text-align: center;
+            max-width: 800px;
+            margin: 30px auto;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+            }
+
+            .welcome-section h1 {
+            font-size: 36px;
+            color: #fff;
+            font-weight: bold;
+            margin-bottom: 10px;
+            text-transform: uppercase;
+            }
+
+            .welcome-section p {
+            font-size: 18px;
+            color: #555;
+            line-height: 1.6;
+            }
 </style>
 <div class="header">
     <a href="/" class="home-button">Home</a>
@@ -114,7 +138,10 @@
     </div>
     <input type="text" class="search-field" id="search-field" placeholder="Digite o ID do Pokémon...">
 </div>
-<div>MAIN</div>
+<div class="welcome-section">
+    <h1>Bem-vindo à Pokédex Interativa</h1>
+    <p>Descubra informações detalhadas sobre todos os Pokémon, explore habitats, e veja características únicas de cada um!</p>
+  </div>
 
 
 <script>
