Updt: estilização habitat e pokemon

--- a/pokemon_frontend/lib/pokemon_frontend_web/controllers/page_html/pokemon.html.heex
+++ b/pokemon_frontend/lib/pokemon_frontend_web/controllers/page_html/pokemon.html.heex
@@ -2,7 +2,7 @@
 <style>
   body {
     font-family: Arial, sans-serif;
-    background-image: url('https://assets.pokemon.com/static2/_ui/img/chrome/container_bg.png');
+    background-image: url("https://assets.pokemon.com/static2/_ui/img/chrome/container_bg.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -14,7 +14,7 @@
     background-color: #ff3b30;
     border-radius: 15px;
     border: 4px solid #000;
-    width: 500px;
+    width: 600px;
     margin: 50px auto;
     padding: 20px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
@@ -32,6 +32,10 @@
     margin: 0 auto;
     width: 150px;
     height: 150px;
+    border: 1px solid #000;
+    border-radius: 15px;
+    margin-bottom: 20px;
+    background-color: rgb(173, 173, 173);
   }
 
   .pokemon-info {
@@ -79,118 +83,142 @@
     font-weight: bold;
   }
 
+  .pokemon-img-div {
+    display: flex;
+    justify-content: space-around;
+  }
+
   .header {
-            background-color: #333;
-            padding: 10px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
+    background-color: #333;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-        .header .home-button {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-            background-color: #ff3b30;
-            padding: 10px 20px;
-            border-radius: 5px;
-            font-size: 16px;
-        }
+  .header .home-button {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    background-color: #ff3b30;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 16px;
+  }
 
-        .header .search-field {
-            padding: 8px;
-            border-radius: 5px;
-            border: 2px solid #ccc;
-            width: 200px;
-        }
+  .header .search-field {
+    padding: 8px;
+    border-radius: 5px;
+    border: 2px solid #ccc;
+    width: 200px;
+  }
 </style>
 
 <div class="header">
   <a href="/" class="home-button">Home</a>
-  <div class="pokemon-buttons">
-    <div style="display: flex; justify-content: center;">
-      <button id="first-pokemon-button" class="btn btn-primary">1º Pokémon</button>
-      <button id="random-pokemon-button" class="btn btn-secondary">Pokémon Aleatório</button>
-    </div>
-</div>
-<input type="text" class="search-field" id="search-field" placeholder="Digite o ID do Pokémon...">
+  <input
+    type="text"
+    class="search-field"
+    id="search-field"
+    placeholder="Digite o ID do Pokémon..."
+  />
 </div>
 
 <div class="pokedex">
-
   <div class="pokemon-info">
-  <h1><%= @pokemon["name"] %></h1>
-  <p>Altura: <%= Float.round(@pokemon["height"] * 0.1, 1) %> m</p>
-  <p>Peso: <%= Float.round(@pokemon["weight"] * 0.1, 1) %> kg</p>
-  <p>Ordem: <%= @pokemon["order"] %></p>
-  <p>Experiência Base: <%= @pokemon["base_experience"] %></p>
-  
-  <!-- Corrigindo a tag <img> -->
-  <img src={@pokemon["sprites"]["front_default"]} alt="Pokemon Image">
+    <h1><%= @pokemon["name"] %></h1>
+    <p>Altura: <%= Float.round(@pokemon["height"] * 0.1, 1) %> m</p>
+    <p>Peso: <%= Float.round(@pokemon["weight"] * 0.1, 1) %> kg</p>
+    <p>ID: <%= @pokemon["id"] %></p>
+    <p>Experiência Base: <%= @pokemon["base_experience"] %></p>
 
-  <div class="pokemon-buttons">
-  <a href="/pokemon-habitat/forest">GO TO HABITAT</a>
+    <!-- Corrigindo a tag <img> -->
+    <div class="pokemon-img-div">
+      <div>
+        <p>Normal</p>
+        <img src={@pokemon["sprites"]["front_default"]} alt="Pokemon Image">
+      </div>
+      <div>
+        <!-- Alterando a imagem para shiny -->
+        <p>Shiny</p>
+        <img src={@pokemon["sprites"]["front_shiny"]} alt="Pokemon Image">
+      </div>
+    </div>
+    <div class="pokemon-buttons">
+      <a href="/pokemon-habitat/forest">GO TO HABITAT</a>
 
-  <div style="display: flex; justify-content: center;">
-  <button phx-click="prev_page" id="prev-page-button" class="btn btn-secondary">Voltar Página</button>
-  <button phx-click="next_page" id="next-page-button" class="btn btn-primary">Próxima Página</button>
+      <div style="display: flex; justify-content: center">
+        <button
+          phx-click="prev_page"
+          id="prev-page-button"
+          class="btn btn-secondary"
+        >
+          Voltar Página
+        </button>
+        <button
+          phx-click="next_page"
+          id="next-page-button"
+          class="btn btn-primary"
+        >
+          Próxima Página
+        </button>
+      </div>
+    </div>
+
+    <script>
+      // Função para avançar para a próxima página
+      document
+        .getElementById("next-page-button")
+        .addEventListener("click", function () {
+          // Obtém o ID atual da URL
+          const currentUrl = window.location.href;
+          const currentId = parseInt(currentUrl.split("/").pop());
+
+          // Incrementa o ID e redireciona para a próxima página
+          const nextId = currentId + 1;
+          const newUrl = currentUrl.replace(/\/\d+$/, `/${nextId}`);
+
+          // Redireciona para a nova URL
+          window.location.href = newUrl;
+        });
+
+      // Função para voltar para a página anterior
+      document
+        .getElementById("prev-page-button")
+        .addEventListener("click", function () {
+          // Obtém o ID atual da URL
+          const currentUrl = window.location.href;
+          const currentId = parseInt(currentUrl.split("/").pop());
+
+          // Decrementa o ID (mas não deixa ir abaixo de 1)
+          const prevId = currentId > 1 ? currentId - 1 : 1;
+          const newUrl = currentUrl.replace(/\/\d+$/, `/${prevId}`);
+
+          // Redireciona para a nova URL
+          window.location.href = newUrl;
+        });
+
+      // Adiciona um evento ao campo de texto para redirecionar ao pressionar "Enter"
+      document
+        .getElementById("search-field")
+        .addEventListener("keypress", function (event) {
+          if (event.key === "Enter") {
+            // Verifica se a tecla pressionada foi "Enter"
+            const pokemonId = event.target.value.trim(); // Obtém o valor inserido
+
+            // Verifica se o valor é um número e está entre 1 e 1000
+            if (
+              pokemonId &&
+              !isNaN(pokemonId) &&
+              pokemonId >= 1 &&
+              pokemonId <= 1025
+            ) {
+              window.location.href = `/pokemon/${pokemonId}`;
+            } else {
+              alert("Por favor, insira um número válido entre 1 e 1025.");
+            }
+          }
+        });
+    </script>
   </div>
-  </div>
-
-  <script>
-    // Função para avançar para a próxima página
-    document.getElementById("next-page-button").addEventListener("click", function() {
-      // Obtém o ID atual da URL
-      const currentUrl = window.location.href;
-      const currentId = parseInt(currentUrl.split("/").pop());
-
-      // Incrementa o ID e redireciona para a próxima página
-      const nextId = currentId + 1;
-      const newUrl = currentUrl.replace(/\/\d+$/, `/${nextId}`);
-
-      // Redireciona para a nova URL
-      window.location.href = newUrl;
-    });
-
-    // Função para voltar para a página anterior
-    document.getElementById("prev-page-button").addEventListener("click", function() {
-      // Obtém o ID atual da URL
-      const currentUrl = window.location.href;
-      const currentId = parseInt(currentUrl.split("/").pop());
-
-      // Decrementa o ID (mas não deixa ir abaixo de 1)
-      const prevId = currentId > 1 ? currentId - 1 : 1;
-      const newUrl = currentUrl.replace(/\/\d+$/, `/${prevId}`);
-
-      // Redireciona para a nova URL
-      window.location.href = newUrl;
-    });
-
-    // Função para ir para um Pokémon aleatório
-    document.getElementById("random-pokemon-button").addEventListener("click", function() {
-      const randomId = Math.floor(Math.random() * 1025) + 1; // Gera um número aleatório entre 1 e 1000
-      const newUrl = `/pokemon/${randomId}`;
-      window.location.href = newUrl;
-  });
-
-  // Função para ir para o 1º Pokémon
-  document.getElementById("first-pokemon-button").addEventListener("click", function() {
-      window.location.href = "/pokemon/1";
-  });
-
-  // Adiciona um evento ao campo de texto para redirecionar ao pressionar "Enter"
-  document.getElementById("search-field").addEventListener("keypress", function(event) {
-    if (event.key === "Enter") { // Verifica se a tecla pressionada foi "Enter"
-        const pokemonId = event.target.value.trim(); // Obtém o valor inserido
-
-        // Verifica se o valor é um número e está entre 1 e 1000
-        if (pokemonId && !isNaN(pokemonId) && pokemonId >= 1 && pokemonId <= 1025) {
-            window.location.href = `/pokemon/${pokemonId}`;
-        } else {
-            alert("Por favor, insira um número válido entre 1 e 1025.");
-        }
-    }
-});
-  </script>
-</div>
 </div>
