--- a/pokemon_frontend/lib/pokemon_frontend_web/controllers/page_html/pokemon.html.heex
+++ b/pokemon_frontend/lib/pokemon_frontend_web/controllers/page_html/pokemon.html.heex
@@ -145,7 +145,7 @@
       </div>
     </div>
     <div class="pokemon-buttons">
-      <a href="/pokemon-habitat/forest">GO TO HABITAT</a>
+      <a href="/pokemon-habitat/1">Ir para o Habitat</a>
 
       <div style="display: flex; justify-content: center">
         <button
