--- a/pokemon_frontend/lib/pokemon_frontend_web/controllers/page_html/pokemon.html.heex
+++ b/pokemon_frontend/lib/pokemon_frontend_web/controllers/page_html/pokemon.html.heex
@@ -100,7 +100,7 @@
     color: white;
     text-decoration: none;
     font-weight: bold;
-    background-color: #ff3b30;
+    background-color: #db1e2e;
     padding: 10px 20px;
     border-radius: 5px;
     font-size: 16px;
