--- a/pokemon_frontend/lib/pokemon_frontend_web/controllers/page_html/habitat.html.heex
+++ b/pokemon_frontend/lib/pokemon_frontend_web/controllers/page_html/habitat.html.heex
@@ -167,7 +167,7 @@
 
 <div>
   <div class="habitat">
-    <h1>Name: <%= @habitat["name"] %></h1>
+    <h1>Habitat: <%= @habitat["name"] %></h1>
     <p>ID: <%= @habitat["id"] %></p>
   </div>
 
