--- a/pokemon_frontend/lib/pokemon_frontend_web/controllers/page_html/home.html.heex
+++ b/pokemon_frontend/lib/pokemon_frontend_web/controllers/page_html/home.html.heex
@@ -128,7 +128,53 @@
     color: #555;
     line-height: 1.6;
   }
+
+  .texto {
+    background-color: #f1f1f1 90%;
+    border: 2px solid #000;
+    border-radius: 10px;
+    padding: 15px;
+    margin: 10px 0;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 200px;
+  }
+
+  .texto h1 {
+    margin: 0;
+    font-size: 24px;
+    color: #000;
+    font-weight: bold;
+  }
+
+  .texto p {
+    margin: 8px 0;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  .alunos {
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+  }
+
+  .alunosDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .alunosDiv img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 2px solid #000;
+  }
 </style>
+
 <div class="header">
   <a href="/" class="home-button">Home</a>
   <input
@@ -162,6 +208,27 @@
     <button id="random-habitat-button" class="btn btn-secondary">
       Habitat Aleatório
     </button>
+  </div>
+</div>
+
+<div class="texto">
+  <h1>Desenvolvido por:</h1>
+  <div class="alunos">
+    <div class="alunosDiv">
+      <img src="https://i.imgur.com/Amp4za2.jpeg" />
+      <p>Gabriel Dantas</p>
+      <p>20200154031</p>
+    </div>
+    <div class="alunosDiv">
+      <img src="https://i.imgur.com/CnT9QrL.jpeg" />
+      <p>Francisco Santana</p>
+      <p>20210025969</p>
+    </div>
+    <div class="alunosDiv">
+      <img src="https://i.imgur.com/v3JDHWK.jpeg" />
+      <p>José Matheus</p>
+      <p>20200010004</p>
+    </div>
   </div>
 </div>
 
